[package]
name = "visrs3"
version = "0.1.0"
authors = ["Alex Pécsi <alex.pecsi@gmail.com>"]
edition = "2018"

[dependencies]
glutin = "0.20.0"
glium = "0.24.0"
#ash = "0.28"
#vulkano = "0.11.1"
session_types = "*"
glsl = "*"
multiqueue = "0.3.2"
wavefront_obj = "6.0.0"
glm = "0.2.3"
num-traits = "0.2.6"
