[package]
name = "visrs3"
version = "0.1.0"
authors = ["Alex Pécsi <alex.pecsi@gmail.com>"]
edition = "2018"

[dependencies]
#ash = "0.28"
glium = "0.24.0"
glm = "0.2.3"
glsl = "0.13.5"
glutin = "0.20.0"
multiqueue = "0.3.2"
num-traits = "0.2.6"
session_types = "*"
#vulkano = "0.11.1"
wavefront_obj = "6.0.0"
